--- a/app.html
+++ b/app.html
@@ -3,69 +3,107 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Auto‑Apply Dashboard — So Jobless BH</title>
+  <title>So Jobless BH — Auto Apply Dashboard</title>
+  <!-- Tailwind (fine for now; can switch to compiled later) -->
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <style>
+    :root { --brand:#fd2f4b; }
+    body { font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji"; }
+  </style>
 </head>
-<body class="bg-white text-gray-900">
-  <header class="sticky top-0 z-30 border-b border-gray-100 bg-white/80 backdrop-blur">
-    <div class="mx-auto max-w-7xl px-4 py-3 flex items-center justify-between">
-      <a href="./index.html" class="flex items-center gap-3">
-        <div class="h-9 w-9 rounded-xl flex items-center justify-center text-white font-bold glow" style="background:#fd2f4b">SJ</div>
-        <div class="leading-tight">
-          <div class="font-extrabold tracking-tight text-lg text-[#fd2f4b]">So Jobless BH</div>
-          <div class="text-[11px] text-gray-500">Auto‑Apply</div>
-        </div>
+<body class="bg-neutral-50 text-neutral-900">
+  <!-- Top bar -->
+  <header class="sticky top-0 z-10 bg-white/80 backdrop-blur border-b border-neutral-200">
+    <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
+      <a href="index.html" class="flex items-center gap-2">
+        <div class="w-8 h-8 rounded-xl bg-[--brand] text-white grid place-items-center font-extrabold">SJ</div>
+        <div class="text-sm font-extrabold text-[--brand]">So Jobless BH</div>
       </a>
-      <button id="btnSignOut" class="rounded-lg px-3 py-2 border">Sign out</button>
+      <div class="flex items-center gap-3">
+        <a href="index.html" class="hidden md:inline text-sm text-neutral-600 hover:text-neutral-900">Home</a>
+        <button id="signOutBtn" class="hidden px-3 py-2 rounded-lg bg-[--brand] text-white font-semibold text-sm">
+          Sign out
+        </button>
+      </div>
     </div>
   </header>
 
-  <main class="mx-auto max-w-7xl px-4 py-6 grid grid-cols-1 lg:grid-cols-3 gap-6">
-    <section class="lg:col-span-2">
-      <div class="rounded-2xl border border-gray-100 card p-5">
-        <div class="flex items-center justify-between">
-          <h2 class="text-xl font-extrabold tracking-tight">Your Profile</h2>
-          <button id="btnEdit" class="text-sm border px-3 py-1.5 rounded-lg">Edit</button>
-        </div>
-        <div class="mt-4 grid grid-cols-1 md:grid-cols-3 gap-4 items-center">
-          <img id="profImg" class="w-28 h-28 rounded-xl object-cover bg-gray-100" alt="Profile" />
-          <div class="md:col-span-2">
-            <div id="profName" class="font-bold text-lg">—</div>
-            <div id="profTitle" class="text-sm text-gray-600">—</div>
-            <div id="profAbout" class="text-sm text-gray-600 mt-1">—</div>
-            <div class="mt-2">
-              <a id="profCV" class="text-sm text-[#fd2f4b] underline" target="_blank">View CV</a>
+  <!-- Page -->
+  <main class="max-w-6xl mx-auto px-4 py-6">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+      <!-- Left: Profile -->
+      <section id="profileCard" class="bg-white border border-neutral-200 rounded-2xl p-5 lg:p-6 shadow-sm">
+        <h2 class="text-lg font-extrabold mb-4">Your profile</h2>
+        <div class="flex items-start gap-4">
+          <img id="profileImg" class="hidden w-20 h-20 rounded-xl object-cover border border-neutral-200" alt="Profile">
+          <div class="flex-1">
+            <div id="profileName" class="text-xl font-extrabold">Your name</div>
+            <div id="profileTitle" class="text-sm text-neutral-600">Your title</div>
+            <p id="profileAbout" class="text-sm text-neutral-700 mt-2">Your short intro</p>
+
+            <div class="mt-3 flex items-center gap-3">
+              <a id="profileCvLink" href="#" target="_blank"
+                 class="hidden inline-flex items-center justify-center px-3 py-2 rounded-lg bg-neutral-900 text-white text-sm font-semibold">
+                View CV
+              </a>
+              <a href="auth.html"
+                 class="inline-flex items-center justify-center px-3 py-2 rounded-lg border border-neutral-300 text-sm">
+                Edit profile
+              </a>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="rounded-2xl border border-gray-100 card p-5 mt-6">
-        <div class="flex items-center justify-between">
-          <h2 class="text-xl font-extrabold tracking-tight">Choose Your Role <span class="text-gray-400 text-sm">(max 3)</span></h2>
-          <div id="selectedLabel" class="text-sm text-gray-500">Selected: None</div>
+        <div class="mt-6 grid grid-cols-2 gap-3">
+          <div class="rounded-xl border border-neutral-200 p-4">
+            <div class="text-xs uppercase tracking-wide text-neutral-500">Live Jobs</div>
+            <div class="mt-1 text-2xl font-extrabold"><span id="totalJobsCount">0</span></div>
+            <div class="text-xs text-neutral-500">Updated daily</div>
+          </div>
+          <div class="rounded-xl border border-neutral-200 p-4">
+            <div class="text-xs uppercase tracking-wide text-neutral-500">Matched Now</div>
+            <div class="mt-1 text-2xl font-extrabold"><span id="matchedCount">0</span></div>
+            <div class="text-xs text-neutral-500">Based on your roles</div>
+          </div>
         </div>
-        <div id="chips" class="mt-4 flex flex-wrap gap-2"></div>
-      </div>
+      </section>
 
-      <div class="rounded-2xl border border-gray-100 card p-5 mt-6">
-        <div class="flex items-center justify-between">
-          <h2 class="text-xl font-extrabold tracking-tight">Apply</h2>
-          <button id="btnApply" class="rounded-lg px-4 py-2 text-white font-semibold glow" style="background:#fd2f4b">Apply Now</button>
+      <!-- Right: Role picker + Apply -->
+      <section id="categoriesPanel" class="bg-white border border-neutral-200 rounded-2xl p-5 lg:p-6 shadow-sm transition">
+        <h2 class="text-lg font-extrabold mb-4">Pick up to 3 roles</h2>
+
+        <div class="mb-3 text-sm text-neutral-600">
+          Choose roles like <em>Barista</em>, <em>Driver (Light)</em>, <em>Sales Executive</em>. We’ll email every matching job, and keep auto-applying daily.
         </div>
-        <div class="mt-3 text-xs text-gray-500">We’ll write application records for matching jobs and your existing email sender will contact employers.</div>
-      </div>
-    </section>
 
-    <aside>
-      <div class="rounded-2xl border border-gray-100 card p-5">
-        <h3 class="text-lg font-bold">Jobs Overview</h3>
-        <div id="breakdown" class="mt-3"></div>
-      </div>
-    </aside>
+        <!-- Role selector -->
+        <label class="text-sm font-semibold">Roles</label>
+        <select id="rolePicker" class="mt-1 w-full border border-neutral-300 rounded-lg p-2 text-sm" multiple size="8"></select>
+
+        <!-- Chips preview -->
+        <div id="roleChips" class="mt-3 flex flex-wrap gap-2"></div>
+
+        <!-- Actions -->
+        <div class="mt-5 flex items-center justify-between gap-3">
+          <div class="text-sm text-neutral-600">
+            Jobs matched: <span id="matchedCount2" class="font-semibold">0</span>
+          </div>
+          <button id="applyBtn" disabled
+                  class="px-4 py-2 rounded-lg bg-[--brand] text-white font-semibold disabled:opacity-40">
+            Apply Now
+          </button>
+        </div>
+
+        <p class="mt-3 text-xs text-neutral-500">
+          By clicking Apply Now, we send polite, branded emails for each match. New jobs are auto-applied daily at 9:00 (Bahrain time).
+        </p>
+      </section>
+    </div>
   </main>
 
+  <!-- App script -->
   <script type="module" src="./app.js"></script>
 </body>
 </html>
