--- a/app.html
+++ b/app.html
@@ -105,6 +105,6 @@
   </main>
 
   <!-- App script (cache-busted so prod always pulls the latest) -->
-  <script type="module" src="./app.js?v=2025-09-28a"></script>
+  <script type="module" src="./app.js?v=2025-09-28b"></script>
 </body>
 </html>
