Commit all current changes

--- a/app.html
+++ b/app.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>So Jobless BH — Auto Apply Dashboard</title>
   <!-- Tailwind (CDN is fine for now; can switch to compiled build later) -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root { --brand:#fd2f4b; }
     body { font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji"; }
   </style>
+  <link rel="stylesheet" href="./app.css" />
 </head>
 <body class="bg-neutral-50 text-neutral-900">
   <!-- Top bar -->
