--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>So Jobless BH — Find It. Auto‑Apply. Get Hired.</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="./styles.css" />
+<link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./app.css" />
 </head>
 <body class="bg-white text-gray-900">
   <!-- Header -->
