--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
       </a>
       <nav class="hidden md:flex items-center gap-6 text-sm">
-        <a href="#how" class="text-gray-600 hover:text-gray-900">How it works</a>
+        <a href="./auth.html" class="text-gray-600 hover:text-gray-900">Sign In</a>
         <a href="#features" class="text-gray-600 hover:text-gray-900">Features</a>
         <a href="#faq" class="text-gray-600 hover:text-gray-900">FAQ</a>
       </nav>
@@ -48,7 +48,7 @@
         </p>
         <div class="mt-8 flex flex-wrap gap-3 reveal">
           <a id="ctaStart" href="./auth.html" class="rounded-xl px-5 py-3 text-white font-semibold glow" style="background:#fd2f4b">Sign Up</a>
-          <a href="#how" class="rounded-xl px-5 py-3 border border-gray-200">How it Works</a>
+<a href="./auth.html" class="rounded-xl px-5 py-3 border border-gray-200">Sign In</a>
         </div>
         <div class="mt-8 grid grid-cols-2 gap-4 max-w-lg reveal">
           <div class="card rounded-xl p-4 bg-white tilt">
